feat: convert benchmarks to use contains Joiners (#115)